Успешный перенос старого клиента на новый артефакт